--- a/style.css
+++ b/style.css
@@ -8,5 +8,8 @@ h2,h3,h4,h1 {
     color:rgb(255, 255, 255);
 }
 .btn-group {
-    background-color:#dddae2;
+    background: color #e5c2ea;;
+}
+.jumbotron {
+    background-color:#938096;
 }
