--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color:#53485b;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .text {
     color:rgb(255, 255, 255);
